multi module test: move data module

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   http:
   url_launcher:
 
+  # data層
+  data:
+    path: ../data
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
