--- a/data/pubspec.yaml
+++ b/data/pubspec.yaml
@@ -1,8 +1,8 @@
 name: data
-description: Commons Flutter project.
+description: data package.
 publish_to: 'none'
 
-version: 1.0.0+1
+version: 1.0.0
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -15,3 +15,5 @@ dependencies:
 dev_dependencies:
   build_runner:
   freezed:
+  lints: ^1.0.0
+  test: ^1.16.0
